regression/fail/4.sml
datatype foo = Foo of 'a
